[package]
name = "ponswarp-signaling-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance WebRTC signaling server for PonsWarp"
authors = ["PonsWarp Team"]

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Web Framework & WebSocket
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Thread-safe Collections
dashmap = "6"

# TURN Credentials (HMAC-SHA1)
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# UUID Generation
uuid = { version = "1", features = ["v4"] }

# Random
rand = "0.8"

# Async utilities
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
